[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arduino_nano33iot = { version = "0.7.1", features = [ "unproven", "usb" ] }
arrayvec = { version = "0.7.4", default-features = false }
panic-halt = "0.2.0"
cortex-m = "0.7"
usb-device = "0.2"
usbd-serial = "0.1"
ufmt = "0.2.0"
nom = { version = "7.1.3", default-features = false }

[features]
day-01 = []
day-02 = []
day-03 = []
day-04 = []
day-05 = []
day-06 = []
day-07 = []
day-08 = []
