[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "aoc"

[dependencies]
clap = { version = "4" , features = ["derive"] }
itertools = "0.13"
nom = "7"
rayon = "1"
rustc-hash = "2"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "digits"
harness = false
