[package]
name = "advent-of-code"
description = "Advent of Code"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "aoc"

[dependencies]
ahash = "0.8"
clap = { version = "4" , features = ["derive"] }
itertools = "0.13"
md5 = "0.7"
memoize = "0.4"
nom = "7"
rayon = "1"
rustc-hash = "2"

[profile.release]
# Activate for highest performance, but longer compile times.
#lto = true
#codegen-units = 1

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "days"
harness = false

[[bench]]
name = "digits"
harness = false
